--- a/jobs/load_datasource/templates/bin/pre-start.erb
+++ b/jobs/load_datasource/templates/bin/pre-start.erb
@@ -38,7 +38,7 @@ get_datasource_properties(){
 
   <% if_p("datasource.database_file_path") do |database_file_path| %>
     export DATABASE_FILE_PATH=<%= database_file_path %>
-  <% else %>
+  <% end.else do %>
     export DATABASE_FILE_PATH=/var/vcap/jobs/load_datasource/config/template.sql
   <% end %>
 }
